src/pages/Checkout/OrderDetails/OrderDetails.scss
@import '../../../styles/mixins';

.order-totals table {
  width: 100%;
}

.order-totals tr {
  @include flexJustifyBetween;
  padding: 2rem 0;
}

.order-totals th {
  font-weight: var(--font-weight-bold);
}

.order-totals thead tr {
  border-bottom: 0.1rem solid var(--color-light-gray-divider);
}

.order-totals tfoot tr {
  border-top: 0.1rem solid var(--color-light-gray-divider);
}

.order-totals__subtotal-value,
.order-totals__discount-value {
  font-size: var(--font-size-18);
  font-weight: var(--font-weight-bold);
}

.order-totals__name-quantity-container {
  @include flexVCenter;
}

.order-totals__quantity {
  font-weight: var(--font-weight-bold);
}

.order-totals__total-value {
  font-size: var(--font-size-24);
  font-weight: var(--font-weight-bold);
}

